--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     </nav>
 
     <header>
-        <div class="overlay"></div>
         <h1>glamping La Mirande, weg van de massa</h1>
         <img src="img/background_frankrijk.webp" alt="Foto van ons park in frankrijk" width="500" height="400">
     </header> 
@@ -61,44 +60,48 @@
 
 
             <label for="volwassenen">Volwassenen</label><br>
-            <input type="number" id="volwassenen" name="fname" min="1" max="3"><br>
+            <input type="number" class="formextrastyle" id="volwassenen" name="fname" min="1" max="3"><br>
             <label for="kinderen">Kinderen</label><br>
-            <input type="number" id="kinderen" name="lname" min="0" max="3"><br>
+            <input type="number" class="formextrastyle" id="kinderen" name="lname" min="0" max="3"><br>
             <label for="huisdieren">Huisdieren</label><br>
-            <input type="number" id="huisdieren" name="fname" min="0" max="3"><br>
+            <input type="number" class="formextrastyle" id="huisdieren" name="fname" min="0" max="3"><br>
             <label for="auto">Auto</label><br>
-            <input type="number" id="auto" name="lname" min="0" max="3"><br>
+            <input type="number" class="formextrastyle" id="auto" name="lname" min="0" max="3"><br>
 
             <label for="kenteken">Kenteken</label><br>
             <input type="text" id="kenteken" name="lname" maxlength="10" size="10"><br>
 
             <label for="soortCampingplek">soort campingplek</label><br>
-            <select id="soortCampingplek" name="soortCampingplek"  size="10">
+            <select id="soortCampingplek" name="soortCampingplek" class="formextrastyledatum">
                 <option value="optie1">optie 1</option>
                 <option value="optie2">optie 2</option>
                 <option value="optie3">optie 3</option>
             </select><br>
 
             <label for="aankomstDatum">aankomst datum</label><br>
-            <input type="date" id="aankomstDatum" name="aankomstDatum" min="2023-04-04" max="2025-12-31"  size="10"><br>
+            <input type="date" id="aankomstDatum" class="formextrastyledatum" name="aankomstDatum" min="2023-04-04" max="2025-12-31"  size="10"><br>
             
             <label for="vertrekDatum">vertrek datum</label><br>
-            <input type="date" id="vertrekDatum" name="vertrekDatum" min="2023-04-04" max="2025-12-31"  size="10"><br>
+            <input type="date" id="vertrekDatum" class="formextrastyledatum" name="vertrekDatum" min="2023-04-04" max="2025-12-31"  size="10"><br>
 
             <label for="elektriciteit">elektriciteit</label><br>
-            <select id="elektriciteit" name="elektriciteit"  size="3">
+            <select id="elektriciteit" name="elektriciteit" class="formextrastyle" >
                 <option value="ja">ja</option>
                 <option value="nee">nee</option>
             </select><br>
 
             <label for="stromendwater">stromend water</label><br>
-            <select id="stromendwater" name="stromendwater"  size="3">
+            <select id="stromendwater" name="stromendwater" class="formextrastyle" >
                 <option value="ja">ja</option>
                 <option value="nee">nee</option>
             </select><br>
 
             <label for="interesses">interesses</label><br>
-            <input type="checkbox" id="interesses"><br>
+            <input type="checkbox" id="interesses"> dit is een interesse </input><br>
+            <input type="checkbox" id="interesses"> dit is een interesse </input><br>
+            <input type="checkbox" id="interesses"> dit is een interesse </input><br>
+            <input type="checkbox" id="interesses"> dit is een interesse </input><br>
+            <input type="checkbox" id="interesses"> dit is een interesse </input><br>
 
             <input type="submit" value="Submit" class="submit"><br>
 
